--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+  background-attachment: fixed;
+    -webkit-background-attachment: fixed;
+    -moz-background-attachment: fixed;
+    -o-background-attachment: fixed;
 }
 
 a {
