--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@ body {
     -webkit-background-attachment: fixed;
     -moz-background-attachment: fixed;
     -o-background-attachment: fixed;
+  background-position: center center;
 }
 
 a {
