--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     /* color: darkgrey; */
-    background: url("https://imgs.search.brave.com/v_1n7vsgD_jFHany4YXZtyWihJ2Dwfctx7vhf29yyv0/rs:fit:1021:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC52/OE5BMzhWMTVQaVJH/TVRmNGN1bEVnSGFE/YyZwaWQ9QXBp") no-repeat center center fixed; 
+    background: url("https://imgs.search.brave.com/v_1n7vsgD_jFHany4YXZtyWihJ2Dwfctx7vhf29yyv0/rs:fit:1021:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC52/OE5BMzhWMTVQaVJH/TVRmNGN1bEVnSGFE/YyZwaWQ9QXBp") no-repeat fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -14,7 +14,6 @@ body {
     -webkit-background-attachment: fixed;
     -moz-background-attachment: fixed;
     -o-background-attachment: fixed;
-  background-position: center center;
 }
 
 a {
