--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,8 @@ body {
     -webkit-background-attachment: fixed;
     -moz-background-attachment: fixed;
     -o-background-attachment: fixed;
+      width: 100%;
+    height: 100vh;
 }
 
 a {
