--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,17 +5,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     /* color: darkgrey; */
-    background: url("https://imgs.search.brave.com/v_1n7vsgD_jFHany4YXZtyWihJ2Dwfctx7vhf29yyv0/rs:fit:1021:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC52/OE5BMzhWMTVQaVJH/TVRmNGN1bEVnSGFE/YyZwaWQ9QXBp") no-repeat center fixed; 
+    background: url("https://imgs.search.brave.com/v_1n7vsgD_jFHany4YXZtyWihJ2Dwfctx7vhf29yyv0/rs:fit:1021:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC52/OE5BMzhWMTVQaVJH/TVRmNGN1bEVnSGFE/YyZwaWQ9QXBp") no-repeat fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  background-attachment: fixed;
-    -webkit-background-attachment: fixed;
-    -moz-background-attachment: fixed;
-    -o-background-attachment: fixed;
-      width: 100%;
-    height: 100vh;
+    background-position: center center;
 }
 
 a {
@@ -257,6 +252,7 @@ table {
   border-right: 1px solid black; 
   padding: 5px;
   margin: 10px 5px 10px 5px;
+  min-height: 146px;
   background-color: white;
 }
 
@@ -289,6 +285,11 @@ table {
 .author > p{
  padding-left: 12%;
  padding-right: 12%;
+}
+
+.a-propos {
+  width: 90%;
+  padding: 0 20px;
 }
 
 @media(max-width: 930px) {
@@ -333,6 +334,14 @@ table {
 }
 
 @media(max-width: 500px) {
+
+  body{
+    -webkit-background-size: auto;
+    -moz-background-size: auto;
+    -o-background-size: auto;
+    background-size: auto;
+  }
+
   .top-cinq {
     width: 90%;
   }
