--- a/styles/globals.css
+++ b/styles/globals.css
@@ -215,7 +215,8 @@ main > p {
 .title {
   width: 35%;
   background-color: white;
-  margin: 10px 0;
+  margin-top: 20px;
+  margin-bottom: 15px;
 }
 
 .title-padding {
